# message_bus

./: .gitignore  Makefile  docs.md  main.py  message_bus.py  pyproject.toml  pytest.ini  readme.md
src/: events.py  message_bus.py
src/event_handlers/: base.py
src/message_bus/: __init__.py  commands.py  core.py  events.py  message_bus.py  types.py
src/message_bus/command_handlers/: base.py
src/message_bus/event_handlers/: base.py
src/message_bus/outbox_handlers/: base.py
src/message_bus/repositories/: outbox.py
tests/unit/: test_message_bus.py
